--- a/firmware/Salamander/Salamander.ioc
+++ b/firmware/Salamander/Salamander.ioc
@@ -17,7 +17,8 @@ LWIP.LWIP_DNS=1
 Mcu.Family=STM32F4
 Mcu.IP0=CRC
 Mcu.IP1=ETH
-Mcu.IP10=USB_OTG_FS
+Mcu.IP10=USB_DEVICE
+Mcu.IP11=USB_OTG_FS
 Mcu.IP2=FATFS
 Mcu.IP3=IWDG
 Mcu.IP4=LWIP
@@ -26,7 +27,7 @@ Mcu.IP6=RCC
 Mcu.IP7=RNG
 Mcu.IP8=SDIO
 Mcu.IP9=SYS
-Mcu.IPNb=11
+Mcu.IPNb=12
 Mcu.Name=STM32F429Z(E-G-I)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
@@ -62,13 +63,14 @@ Mcu.Pin35=VP_IWDG_VS_IWDG
 Mcu.Pin36=VP_LWIP_VS_Enabled
 Mcu.Pin37=VP_RNG_VS_RNG
 Mcu.Pin38=VP_SYS_VS_tim1
+Mcu.Pin39=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin4=PH1/OSC_OUT
 Mcu.Pin5=PC1
 Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA7
 Mcu.Pin9=PC4
-Mcu.PinsNb=39
+Mcu.PinsNb=40
 Mcu.UserConstants=
 Mcu.UserName=STM32F429ZITx
 MxCube.Version=4.14.0
@@ -78,6 +80,7 @@ NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:false
+NVIC.OTG_FS_IRQn=true\:0\:0\:false\:false\:true
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true
 NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true
@@ -92,17 +95,16 @@ PA1.Signal=ETH_REF_CLK
 PA10.GPIOParameters=GPIO_Label
 PA10.GPIO_Label=USB_ID
 PA10.Locked=true
-PA10.Mode=OTG/Dual_Role_Device
 PA10.Signal=USB_OTG_FS_ID
 PA11.GPIOParameters=GPIO_Label
 PA11.GPIO_Label=USB_DM
 PA11.Locked=true
-PA11.Mode=OTG/Dual_Role_Device
+PA11.Mode=Device_Only
 PA11.Signal=USB_OTG_FS_DM
 PA12.GPIOParameters=GPIO_Label
 PA12.GPIO_Label=USB_DP
 PA12.Locked=true
-PA12.Mode=OTG/Dual_Role_Device
+PA12.Mode=Device_Only
 PA12.Signal=USB_OTG_FS_DP
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
@@ -228,12 +230,12 @@ ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=2
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=true
-ProjectManager.DeletePrevious=true
+ProjectManager.DeletePrevious=false
 ProjectManager.DeviceId=STM32F429ZITx
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.11.0
 ProjectManager.FreePins=true
 ProjectManager.HalAssertFull=false
-ProjectManager.HeapSize=0x200
+ProjectManager.HeapSize=0x2000
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
@@ -241,11 +243,11 @@ ProjectManager.PreviousToolchain=SW4STM32
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=Salamander.ioc
 ProjectManager.ProjectName=Salamander
-ProjectManager.StackSize=0x400
+ProjectManager.StackSize=0x2000
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false,2-MX_CRC_Init-CRC-false,3-MX_IWDG_Init-IWDG-false,4-MX_RNG_Init-RNG-false,5-MX_SDIO_SD_Init-SDIO-false,6-MX_USB_OTG_FS_USB_Init-USB_OTG_FS-false,7-MX_FATFS_Init-FATFS-false,8-MX_LWIP_Init-LWIP-false
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false,2-MX_CRC_Init-CRC-false,3-MX_IWDG_Init-IWDG-false,4-MX_RNG_Init-RNG-false,5-MX_SDIO_SD_Init-SDIO-false,6-MX_FATFS_Init-FATFS-false,7-MX_LWIP_Init-LWIP-false,8-MX_USB_DEVICE_Init-USB_DEVICE-false
 RCC.48MHZClocksFreq_Value=48000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -316,6 +318,14 @@ RCC.WatchDogFreq_Value=40000
 SDIO.BusWide=SDIO_BUS_WIDE_1B
 SDIO.IPParameters=BusWide,WideMode
 SDIO.WideMode=SDIO_BUS_WIDE_4B
+USB_DEVICE.CLASS_NAME-CDC_FS=CDC
+USB_DEVICE.CLASS_NAME_FS=CDC
+USB_DEVICE.IPParameters=VirtualMode-CDC_FS,VirtualModeFS,USBD_HandleTypeDef-CDC_FS,CLASS_NAME-CDC_FS,CLASS_NAME_FS
+USB_DEVICE.USBD_HandleTypeDef-CDC_FS=hUsbDeviceFS
+USB_DEVICE.VirtualMode-CDC_FS=Cdc
+USB_DEVICE.VirtualModeFS=Cdc_FS
+USB_OTG_FS.IPParameters=VirtualMode
+USB_OTG_FS.VirtualMode=Device_Only
 VP_CRC_VS_CRC.Mode=CRC_Activate
 VP_CRC_VS_CRC.Signal=CRC_VS_CRC
 VP_FATFS_VS_SDIO.Mode=SDIO
@@ -328,5 +338,7 @@ VP_RNG_VS_RNG.Mode=RNG_Activate
 VP_RNG_VS_RNG.Signal=RNG_VS_RNG
 VP_SYS_VS_tim1.Mode=TIM1
 VP_SYS_VS_tim1.Signal=SYS_VS_tim1
+VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
+VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=NUCLEO-F429ZI
 boardIOC=true
