--- a/firmware/Salamander/Salamander.ioc
+++ b/firmware/Salamander/Salamander.ioc
@@ -1,4 +1,9 @@
 #MicroXplorer Configuration settings - do not modify
+ADC3.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_14
+ADC3.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag
+ADC3.NbrOfConversionFlag=1
+ADC3.Rank-0\#ChannelRegularConversion=1
+ADC3.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 CAN1.CalculateTimeBit=1142
 CAN1.CalculateTimeQuantum=380.95238095238096
 CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit
@@ -15,74 +20,114 @@ FATFS0.BSP.name=Detect_SDIO
 File.Version=6
 KeepUserPlacement=true
 Mcu.Family=STM32F4
-Mcu.IP0=CAN1
-Mcu.IP1=CRC
-Mcu.IP10=SYS
-Mcu.IP11=UART7
-Mcu.IP12=USART2
-Mcu.IP13=USB_DEVICE
-Mcu.IP14=USB_OTG_FS
-Mcu.IP2=ETH
-Mcu.IP3=FATFS
-Mcu.IP4=I2C1
-Mcu.IP5=NVIC
-Mcu.IP6=RCC
-Mcu.IP7=RNG
-Mcu.IP8=SDIO
-Mcu.IP9=SPI1
-Mcu.IPNb=15
+Mcu.IP0=ADC3
+Mcu.IP1=CAN1
+Mcu.IP10=SPI1
+Mcu.IP11=SYS
+Mcu.IP12=TIM2
+Mcu.IP13=TIM3
+Mcu.IP14=TIM8
+Mcu.IP15=UART7
+Mcu.IP16=USART2
+Mcu.IP17=USB_DEVICE
+Mcu.IP18=USB_OTG_FS
+Mcu.IP2=CRC
+Mcu.IP3=ETH
+Mcu.IP4=FATFS
+Mcu.IP5=I2C1
+Mcu.IP6=NVIC
+Mcu.IP7=RCC
+Mcu.IP8=RNG
+Mcu.IP9=SDIO
+Mcu.IPNb=19
 Mcu.Name=STM32F429Z(E-G-I)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14/OSC32_IN
-Mcu.Pin10=PA3
-Mcu.Pin11=PA5
-Mcu.Pin12=PA6
-Mcu.Pin13=PA7
-Mcu.Pin14=PC4
-Mcu.Pin15=PC5
-Mcu.Pin16=PB13
-Mcu.Pin17=PB14
-Mcu.Pin18=PD8
-Mcu.Pin19=PD9
+Mcu.Pin10=PC1
+Mcu.Pin11=PA1
+Mcu.Pin12=PA2
+Mcu.Pin13=PA3
+Mcu.Pin14=PA5
+Mcu.Pin15=PA6
+Mcu.Pin16=PA7
+Mcu.Pin17=PC4
+Mcu.Pin18=PC5
+Mcu.Pin19=PB1
 Mcu.Pin2=PC15/OSC32_OUT
-Mcu.Pin20=PG6
-Mcu.Pin21=PG7
-Mcu.Pin22=PC8
-Mcu.Pin23=PC9
-Mcu.Pin24=PA8
-Mcu.Pin25=PA9
-Mcu.Pin26=PA10
-Mcu.Pin27=PA11
-Mcu.Pin28=PA12
-Mcu.Pin29=PA13
-Mcu.Pin3=PF6
-Mcu.Pin30=PA14
-Mcu.Pin31=PC10
-Mcu.Pin32=PC11
-Mcu.Pin33=PC12
-Mcu.Pin34=PD0
-Mcu.Pin35=PD1
-Mcu.Pin36=PD2
-Mcu.Pin37=PD5
-Mcu.Pin38=PG11
-Mcu.Pin39=PG13
-Mcu.Pin4=PF7
-Mcu.Pin40=PB5
-Mcu.Pin41=PB6
-Mcu.Pin42=PB7
-Mcu.Pin43=PB9
-Mcu.Pin44=VP_CRC_VS_CRC
-Mcu.Pin45=VP_FATFS_VS_SDIO
-Mcu.Pin46=VP_RNG_VS_RNG
-Mcu.Pin47=VP_SYS_VS_tim1
-Mcu.Pin48=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
-Mcu.Pin5=PH0/OSC_IN
-Mcu.Pin6=PH1/OSC_OUT
-Mcu.Pin7=PC1
-Mcu.Pin8=PA1
-Mcu.Pin9=PA2
-Mcu.PinsNb=49
+Mcu.Pin20=PF11
+Mcu.Pin21=PF12
+Mcu.Pin22=PF13
+Mcu.Pin23=PF14
+Mcu.Pin24=PF15
+Mcu.Pin25=PE7
+Mcu.Pin26=PE8
+Mcu.Pin27=PE9
+Mcu.Pin28=PE10
+Mcu.Pin29=PE11
+Mcu.Pin3=PF3
+Mcu.Pin30=PE12
+Mcu.Pin31=PE13
+Mcu.Pin32=PE14
+Mcu.Pin33=PE15
+Mcu.Pin34=PB10
+Mcu.Pin35=PB11
+Mcu.Pin36=PB13
+Mcu.Pin37=PB14
+Mcu.Pin38=PB15
+Mcu.Pin39=PD8
+Mcu.Pin4=PF4
+Mcu.Pin40=PD9
+Mcu.Pin41=PD10
+Mcu.Pin42=PD11
+Mcu.Pin43=PD12
+Mcu.Pin44=PD13
+Mcu.Pin45=PD14
+Mcu.Pin46=PD15
+Mcu.Pin47=PG4
+Mcu.Pin48=PG5
+Mcu.Pin49=PG6
+Mcu.Pin5=PF5
+Mcu.Pin50=PG7
+Mcu.Pin51=PG8
+Mcu.Pin52=PC6
+Mcu.Pin53=PC7
+Mcu.Pin54=PC8
+Mcu.Pin55=PC9
+Mcu.Pin56=PA8
+Mcu.Pin57=PA9
+Mcu.Pin58=PA10
+Mcu.Pin59=PA11
+Mcu.Pin6=PF6
+Mcu.Pin60=PA12
+Mcu.Pin61=PA13
+Mcu.Pin62=PA14
+Mcu.Pin63=PC10
+Mcu.Pin64=PC11
+Mcu.Pin65=PC12
+Mcu.Pin66=PD0
+Mcu.Pin67=PD1
+Mcu.Pin68=PD2
+Mcu.Pin69=PD5
+Mcu.Pin7=PF7
+Mcu.Pin70=PG11
+Mcu.Pin71=PG13
+Mcu.Pin72=PB5
+Mcu.Pin73=PB6
+Mcu.Pin74=PB7
+Mcu.Pin75=PB9
+Mcu.Pin76=PE0
+Mcu.Pin77=VP_CRC_VS_CRC
+Mcu.Pin78=VP_FATFS_VS_SDIO
+Mcu.Pin79=VP_RNG_VS_RNG
+Mcu.Pin8=PH0/OSC_IN
+Mcu.Pin80=VP_SYS_VS_tim1
+Mcu.Pin81=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin82=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin83=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin84=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin9=PH1/OSC_OUT
+Mcu.PinsNb=85
 Mcu.UserConstants=
 Mcu.UserName=STM32F429ZITx
 MxCube.Version=4.16.1
@@ -154,6 +199,16 @@ PA9.GPIOParameters=GPIO_Label
 PA9.GPIO_Label=USB_VBUS
 PA9.Locked=true
 PA9.Signal=USB_OTG_FS_VBUS
+PB1.GPIOParameters=GPIO_Label
+PB1.GPIO_Label=SPI-SS-1
+PB1.Locked=true
+PB1.Signal=GPIO_Output
+PB10.Locked=true
+PB10.Signal=S_TIM2_CH3
+PB11.GPIOParameters=GPIO_Label
+PB11.GPIO_Label=E0-Enable
+PB11.Locked=true
+PB11.Signal=GPIO_Output
 PB13.GPIOParameters=GPIO_Label
 PB13.GPIO_Label=RMII_TXD1 [LAN8742A-CZ-TR_TXD1]
 PB13.Locked=true
@@ -163,6 +218,11 @@ PB14.GPIOParameters=GPIO_Label
 PB14.GPIO_Label=LD3 [Red]
 PB14.Locked=true
 PB14.Signal=GPIO_Output
+PB15.GPIOParameters=GPIO_Label
+PB15.GPIO_Label=FAN-1
+PB15.Locked=true
+PB15.Mode=PWM Generation3 CH3N
+PB15.Signal=TIM8_CH3N
 PB5.Mode=Full_Duplex_Master
 PB5.Signal=SPI1_MOSI
 PB6.Mode=I2C
@@ -202,6 +262,13 @@ PC5.GPIO_Label=RMII_RXD1 [LAN8742A-CZ-TR_RXD1]
 PC5.Locked=true
 PC5.Mode=RMII
 PC5.Signal=ETH_RXD1
+PC6.GPIOParameters=GPIO_Label
+PC6.GPIO_Label=FAN-2
+PC6.Signal=S_TIM8_CH1
+PC7.GPIOParameters=GPIO_Label
+PC7.GPIO_Label=FAN-2-IN
+PC7.Locked=true
+PC7.Signal=S_TIM3_CH2
 PC8.Mode=SD_4_bits_Wide_bus
 PC8.Signal=SDIO_D0
 PC9.Mode=SD_4_bits_Wide_bus
@@ -219,6 +286,30 @@ PD0.Mode=Master
 PD0.Signal=CAN1_RX
 PD1.Mode=Master
 PD1.Signal=CAN1_TX
+PD10.GPIOParameters=GPIO_Label
+PD10.GPIO_Label=E0-DIR
+PD10.Locked=true
+PD10.Signal=GPIO_Output
+PD11.GPIOParameters=GPIO_Label
+PD11.GPIO_Label=BED_Heater
+PD11.Locked=true
+PD11.Signal=GPIO_Output
+PD12.GPIOParameters=GPIO_Label
+PD12.GPIO_Label=ENDSTOP Z-MIN
+PD12.Locked=true
+PD12.Signal=GPIO_Input
+PD13.GPIOParameters=GPIO_Label
+PD13.GPIO_Label=ENDSTOP Z-MAX
+PD13.Locked=true
+PD13.Signal=GPIO_Input
+PD14.GPIOParameters=GPIO_Label
+PD14.GPIO_Label=E1-Heater
+PD14.Locked=true
+PD14.Signal=GPIO_Output
+PD15.GPIOParameters=GPIO_Label
+PD15.GPIO_Label=E0-Heater
+PD15.Locked=true
+PD15.Signal=GPIO_Output
 PD2.Mode=SD_4_bits_Wide_bus
 PD2.Signal=SDIO_CMD
 PD5.Mode=Asynchronous
@@ -231,6 +322,81 @@ PD9.GPIOParameters=GPIO_Label
 PD9.GPIO_Label=STLK_TX [STM32F103CBT6_PA2]
 PD9.Locked=true
 PD9.Signal=USART3_RX
+PE0.GPIOParameters=GPIO_Label
+PE0.GPIO_Label=E1-STEP
+PE0.Locked=true
+PE0.Signal=GPIO_Output
+PE10.GPIOParameters=GPIO_Label
+PE10.GPIO_Label=X-STEP
+PE10.Locked=true
+PE10.Signal=GPIO_Output
+PE11.GPIOParameters=GPIO_Label
+PE11.GPIO_Label=Z-STEP
+PE11.Locked=true
+PE11.Signal=GPIO_Output
+PE12.GPIOParameters=GPIO_Label
+PE12.GPIO_Label=X-DIR
+PE12.Locked=true
+PE12.Signal=GPIO_Output
+PE13.GPIOParameters=GPIO_Label
+PE13.GPIO_Label=Z-DIR
+PE13.Locked=true
+PE13.Signal=GPIO_Output
+PE14.GPIOParameters=GPIO_Label
+PE14.GPIO_Label=Y-STEP
+PE14.Locked=true
+PE14.Signal=GPIO_Output
+PE15.GPIOParameters=GPIO_Label
+PE15.GPIO_Label=Y-DIR
+PE15.Locked=true
+PE15.Signal=GPIO_Output
+PE7.GPIOParameters=GPIO_Label
+PE7.GPIO_Label=Y-ENABLE
+PE7.Locked=true
+PE7.Signal=GPIO_Output
+PE8.GPIOParameters=GPIO_Label
+PE8.GPIO_Label=X-ENABLE
+PE8.Locked=true
+PE8.Signal=GPIO_Output
+PE9.GPIOParameters=GPIO_Label
+PE9.GPIO_Label=E1-ENABLE
+PE9.Locked=true
+PE9.Signal=GPIO_Output
+PF11.GPIOParameters=GPIO_Label
+PF11.GPIO_Label=E1-DIR
+PF11.Locked=true
+PF11.Signal=GPIO_Output
+PF12.GPIOParameters=GPIO_Label
+PF12.GPIO_Label=ENDSTOP Y-MIN
+PF12.Locked=true
+PF12.Signal=GPIO_Input
+PF13.GPIOParameters=GPIO_Label
+PF13.GPIO_Label=ENDSTOP Y-MAX
+PF13.Locked=true
+PF13.Signal=GPIO_Input
+PF14.GPIOParameters=GPIO_Label
+PF14.GPIO_Label=Z-ENABLE
+PF14.Locked=true
+PF14.Signal=GPIO_Output
+PF15.GPIOParameters=GPIO_Label
+PF15.GPIO_Label=SPI-SS-2
+PF15.Locked=true
+PF15.Signal=GPIO_Output
+PF3.GPIOParameters=GPIO_Label
+PF3.GPIO_Label=THERMISTOR-3
+PF3.Locked=true
+PF3.Mode=IN9
+PF3.Signal=ADC3_IN9
+PF4.GPIOParameters=GPIO_Label
+PF4.GPIO_Label=THERMISTOR-1
+PF4.Locked=true
+PF4.Mode=IN14
+PF4.Signal=ADC3_IN14
+PF5.GPIOParameters=GPIO_Label
+PF5.GPIO_Label=THERMISTOR-2
+PF5.Locked=true
+PF5.Mode=IN15
+PF5.Signal=ADC3_IN15
 PF6.Mode=Asynchronous
 PF6.Signal=UART7_RX
 PF7.Mode=Asynchronous
@@ -245,6 +411,14 @@ PG13.GPIO_Label=RMII_TXD0 [LAN8742A-CZ-TR_TXD0]
 PG13.Locked=true
 PG13.Mode=RMII
 PG13.Signal=ETH_TXD0
+PG4.GPIOParameters=GPIO_Label
+PG4.GPIO_Label=ENDSTOP X-MIN
+PG4.Locked=true
+PG4.Signal=GPIO_Input
+PG5.GPIOParameters=GPIO_Label
+PG5.GPIO_Label=ENDSTOP X-MAX
+PG5.Locked=true
+PG5.Signal=GPIO_Input
 PG6.GPIOParameters=GPIO_Label
 PG6.GPIO_Label=USB_PowerSwitchOn [STMPS2151STR_EN]
 PG6.Locked=true
@@ -253,6 +427,10 @@ PG7.GPIOParameters=GPIO_Label
 PG7.GPIO_Label=USB_OverCurrent [STMPS2151STR_FAULT]
 PG7.Locked=true
 PG7.Signal=GPIO_Input
+PG8.GPIOParameters=GPIO_Label
+PG8.GPIO_Label=E0-STEP
+PG8.Locked=true
+PG8.Signal=GPIO_Output
 PH0/OSC_IN.GPIOParameters=GPIO_Label
 PH0/OSC_IN.GPIO_Label=MCO [STM32F103CBT6_PA8]
 PH0/OSC_IN.Locked=true
@@ -268,7 +446,7 @@ ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F429ZITx
-ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.11.0
+ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.13.1
 ProjectManager.FreePins=true
 ProjectManager.HalAssertFull=true
 ProjectManager.HeapSize=0x2000
@@ -283,7 +461,7 @@ ProjectManager.StackSize=0x2000
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=F\:\\git_repositories\\myrepos\\Salamander\\firmware\\Salamander
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false,2-MX_CRC_Init-CRC-false,3-MX_RNG_Init-RNG-false,4-MX_SDIO_SD_Init-SDIO-false,5-MX_FATFS_Init-FATFS-false,6-MX_USB_DEVICE_Init-USB_DEVICE-false,7-MX_CAN1_Init-CAN1-false,8-MX_I2C1_Init-I2C1-false,9-MX_SPI1_Init-SPI1-false,10-MX_UART7_Init-UART7-false,11-MX_USART2_UART_Init-USART2-false,12-MX_ETH_Init-ETH-false
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false,2-MX_CRC_Init-CRC-false,3-MX_RNG_Init-RNG-false,4-MX_SDIO_SD_Init-SDIO-false,5-MX_FATFS_Init-FATFS-false,6-MX_USB_DEVICE_Init-USB_DEVICE-false,7-MX_CAN1_Init-CAN1-false,8-MX_I2C1_Init-I2C1-false,9-MX_SPI1_Init-SPI1-false,10-MX_UART7_Init-UART7-false,11-MX_USART2_UART_Init-USART2-false,12-MX_ETH_Init-ETH-false,13-MX_ADC3_Init-ADC3-false,14-MX_TIM2_Init-TIM2-false,15-MX_TIM3_Init-TIM3-false,16-MX_TIM8_Init-TIM8-false
 RCC.48MHZClocksFreq_Value=48000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -354,9 +532,21 @@ RCC.WatchDogFreq_Value=40000
 SDIO.BusWide=SDIO_BUS_WIDE_1B
 SDIO.IPParameters=BusWide,WideMode
 SDIO.WideMode=SDIO_BUS_WIDE_4B
+SH.S_TIM2_CH3.0=TIM2_CH3,Input_Capture3_from_TI3
+SH.S_TIM2_CH3.ConfNb=1
+SH.S_TIM3_CH2.0=TIM3_CH2,Input_Capture2_from_TI2
+SH.S_TIM3_CH2.ConfNb=1
+SH.S_TIM8_CH1.0=TIM8_CH1,PWM Generation1 CH1
+SH.S_TIM8_CH1.ConfNb=1
 SPI1.CalculateBaudRate=42.0 MBits/s
 SPI1.IPParameters=Mode,CalculateBaudRate
 SPI1.Mode=SPI_MODE_MASTER
+TIM2.Channel-Input_Capture3_from_TI3=TIM_CHANNEL_3
+TIM2.IPParameters=Channel-Input_Capture3_from_TI3
+TIM3.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
+TIM3.IPParameters=Channel-Input_Capture2_from_TI2
+TIM8.Channel-PWM\ Generation3\ CH3N=TIM_CHANNEL_3
+TIM8.IPParameters=Channel-PWM Generation3 CH3N
 USB_DEVICE.CLASS_NAME-CDC_FS=CDC
 USB_DEVICE.CLASS_NAME_FS=CDC
 USB_DEVICE.IPParameters=VirtualMode-CDC_FS,VirtualModeFS,USBD_HandleTypeDef-CDC_FS,CLASS_NAME-CDC_FS,CLASS_NAME_FS,USBD_DEBUG_LEVEL-CDC_FS
@@ -374,6 +564,12 @@ VP_RNG_VS_RNG.Mode=RNG_Activate
 VP_RNG_VS_RNG.Signal=RNG_VS_RNG
 VP_SYS_VS_tim1.Mode=TIM1
 VP_SYS_VS_tim1.Signal=SYS_VS_tim1
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
+VP_TIM8_VS_ClockSourceINT.Mode=Internal
+VP_TIM8_VS_ClockSourceINT.Signal=TIM8_VS_ClockSourceINT
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=NUCLEO-F429ZI
